# ci-scan-linting-ignores

./: README.md  pyproject.toml  scan_eslint_ignore.py  scan_pylint_ignore.py
test/: test_scan_eslint_ignore.py  test_scan_pylint_ignore.py
test/input/: .eslintignore  py_ignore.py  ts_ignore.ts
test/output/: py_result_csv  py_result_stdout  ts_result_csv  ts_result_stdout
